--- a/v/0.0.12/index.html
+++ b/v/0.0.12/index.html
@@ -154,7 +154,7 @@ if (($_SESSION['login'])) {
 ?&gt;</pre>
                 <p>Notice, we're importing the config.php and starting a session to check if the user is logged in or not (if he has access or not).</p>
                 <p>Now that's basically all you need to know if you want to get started. But we'll give you some more information that could be helpful.</p>
-                <h4 id="#variables">Variables:</h4>
+                <h4 id="variables">Variables:</h4>
                 <p>There are some useful information about the logged-in user in the session variables and normal PHP vars. Those should never be overwritten!</p>
                 <table>
                     <tr>
@@ -210,7 +210,7 @@ if (($_SESSION['login'])) {
                         <td>returns the database which is selected.</td>
                     </tr>
                 </table>
-                <h4 id="#restapi">REST API</h4>
+                <h4 id="restapi">REST API</h4>
                 <p>The Intranet has a native REST API implemented. Here, you'll learn how to use it and how to filter information with native JavaScript.</p>
                 <p>The important file is in the /php/REST/index.php folder. If you want to send a GET request to get information about any user in the database, there are different ways to accomplish your goal. </p>
                 <table>
